# fixed-point

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cui-cmake  fixed_point.hpp
tests/: CMakeLists.txt  builds.cpp  casts.cpp  equality.cpp  parts.cpp  test.hpp
